# hookdict

./: .devcontainer.json  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  conanfile.txt  linux-toolchain.cmake  settings.json  vcpkg.json  xmake.lua
common/: CMakeLists.txt  Windows.h  common.h  hooks.h  msg.h  xmake.lua
fastcorr/: CMakeLists.txt  fastcorr.cpp  fastcorr.h  run.cpp  xmake.lua
injector/: CMakeLists.txt  elevation.cpp  elevation.h  injector.cpp  injector.exe.manifest  injector.h  process_info.cpp  process_info.h  server.cpp  server.h  xmake.lua
